添加上一个更新记录功能